Update Presto jvm.config
Update the `jvm.config` in accordance with the current recommended JVM
configuration for Presto.